# activity-classification-plugin

./: .gitignore  __init__.py  classifier.py  pyproject.toml  requirements.txt
router/: __init__.py  activity_classification.py
services/: activity_classification_service.py
