[project]
name = "activity-classification-plugin"
version = "0.1.0"
dependencies = [
    "numpy==1.26.4",
    "packaging==24.2",
    "fsspec==2024.6.1",
    "transformers==4.52.4",
    "torch==2.2.2",
]

[tool.coffeebreak]
identifier = "activity-classification-plugin"
name = "Activity Classification Plugin"
description = "A plugin for classifying activities in a conference or event setting."
config_page = true
